*) Encode URL when get URL file by JSOUP.